--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,6 +28,11 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/buttonOfbtn1"
         android:text="BTN2" />
+    <Button
+        android:layout_centerInParent="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/main_btn3" />
 
 
 
