--- a/app/src/main/res/layout/activity_fourth.xml
+++ b/app/src/main/res/layout/activity_fourth.xml
@@ -4,11 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fourthActivity">
+    tools:context=".FourthActivity">
 
     <Button
-        android:id="@+id/button"
-        android:text="Button"
+        android:id="@+id/buttonOfIntent"
+        android:text="fifthActivityへ遷移する"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true" />
