--- a/app/src/main/res/layout/activity_fourth.xml
+++ b/app/src/main/res/layout/activity_fourth.xml
@@ -6,6 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".FourthActivity">
 
+    <TextView
+        android:id="@+id/editText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/main_text_name"
+        />
+
     <Button
         android:id="@+id/buttonOfIntent"
         android:text="fifthActivityへ遷移する"
